navbar fix for resize - collapsable

--- a/pickUpTheMilk/static/css/stylesheet.css
+++ b/pickUpTheMilk/static/css/stylesheet.css
@@ -87,7 +87,7 @@ navbarfont {
     font-weight: bold;
     line-height: 18px;
     font-size: 24px;
-    color:  #ffffff !important;
+    color:  black !important;
     text-transform: capitalize !important;
     }
 
@@ -110,10 +110,23 @@ namefont {
 /* Navigation Bar Area */
 #sitename {
   /*position:absolute;*/
-  float:right;
-  margin-right: 145px;
-  padding-top: 14px
+  /*float:right;*/
+  /*margin-right: 145px;
+  padding-top: 14px*/
+  color: black !important;
+  background-color: black;
 }
+
+.handle {
+  width: 100%;
+  text-align: left;
+  box-sizing: border-box;
+  padding: 10px 10px;
+  cursor: pointer;
+  /*display: none;*/
+}
+
+
 
 nav{
   top: 0;
@@ -135,6 +148,48 @@ nav{
 
 }
 
+
+/*NAVIGATION BAR AREA*/
+@media screen and (max-width: 645px){
+  nav ul {
+    max-height: 0;
+    padding-top: 20px;
+    padding-left: 0px !important;
+  }
+  .showing {
+    max-height: 40em;
+  }
+  nav ul li{
+    width: 100%;
+    box-sizing: border-box;
+    padding:15px;
+
+    text-align: left;
+  }
+  nav img  {
+    display: none;
+  }
+  li a:hover {
+      background-color: none;
+      color: none;
+      text-decoration: none;
+      height: none;
+  }
+  li a.active{
+    background-color: white;
+    color: black;
+    height: 45px;
+    text-decoration: none;
+  }
+  .handle {
+    display:inline;
+    z-index: 1001;
+  }
+  .main_content {
+    margin-top: 30%;
+  }
+}
+
 nav ul {
     width:100%;
     list-style-type: none;
@@ -144,6 +199,10 @@ nav ul {
     overflow: hidden;
     position: inherit;
     background-color: inherit;
+    -webkit-transition: max-height 0.4s;
+    -ms-transition: max-height 0.4s;
+    -o-transition: max-height 0.4s;
+    transition: max-height 0.4s;
 }
 
 nav img {
@@ -153,8 +212,6 @@ nav img {
   height: 110px;
   z-index: 1001;
 }
-
-
 
 nav ul li {
     height: inherit;
@@ -206,6 +263,7 @@ input {
 #bgColour {
  background: rgba(255, 255, 255, 0.80);
 }
+
 .padding {
     position: fixed;
     top: -30px;
